--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,6 +3,7 @@
 		'landingPage',
 		'homePage',
 		'userPage',
+		'tireInfo',
 		'editCar';
 html {
 	height: 100em;
@@ -42,9 +43,3 @@ form{
 	}
 }
 
-.icons {
-	padding-left: 3%;
-	padding-top: 2em;
-	padding-bottom: 2em;
-	text-align: center;
-}
