--- a/styles/_homePage.scss
+++ b/styles/_homePage.scss
@@ -4,7 +4,7 @@
 		color: black;
 		text-align: center;
 	}
-	.row{
+	.row {
 		padding-bottom: 3em;
 		margin: 0 auto;
 	}
@@ -15,3 +15,6 @@
 	}
 }
 
+a {
+	display: block;
+}
