--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -1,4 +1,5 @@
 .navbar {
+  position: relative;
   margin-bottom: 0;
   border-bottom: black; }
   .navbar .container-fluid {
@@ -97,6 +98,12 @@ main {
   -moz-animation: scale-in 1.3s ease-out;
   animation: scale-in 1.3s ease-out; }
 
+.icons {
+  padding-left: 3%;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  text-align: center; }
+
 @media all and (max-width: 768px) {
   .hero {
     height: 50vw; }
@@ -123,6 +130,9 @@ main {
   background: #EE3536;
   border: 1px solid black; }
 
+a {
+  display: block; }
+
 .userContainer {
   margin: 0 auto;
   margin-top: 5em;
@@ -140,6 +150,10 @@ main {
     border-radius: 0;
     outline: none;
     border: 2px solid black; }
+
+.tireImage {
+  width: 100%;
+  max-height: 15em; }
 
 html {
   height: 100em; }
@@ -171,9 +185,3 @@ form {
     margin-bottom: 1em;
     background: black;
     color: #EE3536; }
-
-.icons {
-  padding-left: 3%;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  text-align: center; }
