added some styling to the tire link on the home page. Added some styling to the tire info page

--- a/styles/_tireInfo.scss
+++ b/styles/_tireInfo.scss
@@ -1,4 +1,10 @@
-.tireImage {
-	width: 100%;
-	max-height: 15em;
+.imageContainer {
+	height: 13em;
+	overflow: hidden;
+	.tireImage {
+		width: 100%
+	}
+}
+.list-group li {
+    list-style: none;
 }
