--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -143,7 +143,7 @@ a {
     padding: 1em;
     margin-top: 2em; }
   .userContainer .userButton {
-    width: 20em;
+    width: 10em;
     background: #EE3536;
     color: black;
     margin-top: 2em;
@@ -151,9 +151,14 @@ a {
     outline: none;
     border: 2px solid black; }
 
-.tireImage {
-  width: 100%;
-  max-height: 15em; }
+.imageContainer {
+  height: 13em;
+  overflow: hidden; }
+  .imageContainer .tireImage {
+    width: 100%; }
+
+.list-group li {
+  list-style: none; }
 
 html {
   height: 100em; }
