--- a/styles/_userPage.scss
+++ b/styles/_userPage.scss
@@ -15,7 +15,7 @@
 		background: #EE3536;
 		color: black;
 		margin-top: 2em;
-		border-radius:  0;
+		border-radius:  5px;
 		outline: none;
 		border: 2px solid black;
 	}
