--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -147,7 +147,7 @@ a {
     background: #EE3536;
     color: black;
     margin-top: 2em;
-    border-radius: 0;
+    border-radius: 5px;
     outline: none;
     border: 2px solid black; }
 
