added variables to the css in order to make color changes easier.

--- a/styles/_homePage.scss
+++ b/styles/_homePage.scss
@@ -10,8 +10,9 @@
 	}
 	.homePageEvent {
 		margin-top: 2em;
-		background: #EE3536;
-		border: 1px solid black;
+		background: $event-box;
+		border: $border;
+		border-radius: $border-radius;
 	}
 }
 
