--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -3,7 +3,7 @@
 	margin-bottom: 0;
 	border-bottom: black;
 	.container-fluid {
-		background: #EE3536;
+		background: $nav-bar;
 		border-bottom: black;
 	}
 }
