--- a/styles/_landingPage.scss
+++ b/styles/_landingPage.scss
@@ -56,10 +56,10 @@ main{
 .bar{
   width: 100%;
   height: 200px;
-  background: -moz-linear-gradient(289deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
-  background: -webkit-linear-gradient(289deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
-  background: -ms-linear-gradient(289deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
-  background: linear-gradient(161deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
+  background: -moz-linear-gradient(289deg, $landing-bar-outer 0%, $landing-bar-inner 36%, $landing-bar-outer 100%);
+  background: -webkit-linear-gradient(289deg, $landing-bar-outer 0%, $landing-bar-inner 36%, $landing-bar-outer 100%);
+  background: -ms-linear-gradient(289deg, $landing-bar-outer 0%, $landing-bar-inner 36%, $landing-bar-outer 100%);
+  background: linear-gradient(161deg, $landing-bar-outer 0%, $landing-bar-inner 36%, $landing-bar-outer 100%);
   opacity: 0.3;
   position: absolute; 
   z-index: 0;
