--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -3,7 +3,7 @@
   margin-bottom: 0;
   border-bottom: black; }
   .navbar .container-fluid {
-    background: #EE3536;
+    background: #95BCC5;
     border-bottom: black; }
 
 .navbar-default .navbar-nav > li > a {
@@ -77,10 +77,10 @@ main {
 .bar {
   width: 100%;
   height: 200px;
-  background: -moz-linear-gradient(289deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
-  background: -webkit-linear-gradient(289deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
-  background: -ms-linear-gradient(289deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
-  background: linear-gradient(161deg, #c60a09 0%, #f23332 36%, #c60a09 100%);
+  background: -moz-linear-gradient(289deg, #B8C5C7 0%, #95BCC5 36%, #B8C5C7 100%);
+  background: -webkit-linear-gradient(289deg, #B8C5C7 0%, #95BCC5 36%, #B8C5C7 100%);
+  background: -ms-linear-gradient(289deg, #B8C5C7 0%, #95BCC5 36%, #B8C5C7 100%);
+  background: linear-gradient(161deg, #B8C5C7 0%, #95BCC5 36%, #B8C5C7 100%);
   opacity: 0.3;
   position: absolute;
   z-index: 0;
@@ -127,8 +127,9 @@ main {
 
 .homePage .homePageEvent {
   margin-top: 2em;
-  background: #EE3536;
-  border: 1px solid black; }
+  background: #95BCC5;
+  border: 1px solid #000000;
+  border-radius: 5px; }
 
 a {
   display: block; }
@@ -138,18 +139,19 @@ a {
   margin-top: 5em;
   box-sizing: border-box; }
   .userContainer .eventBox {
-    border: 1px solid black;
-    background: #EE3536;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    background: #95BCC5;
     padding: 1em;
     margin-top: 2em; }
   .userContainer .userButton {
     width: 10em;
-    background: #EE3536;
+    background: #95BCC5;
     color: black;
     margin-top: 2em;
     border-radius: 5px;
     outline: none;
-    border: 2px solid black; }
+    border: 1px solid #000000; }
 
 .imageContainer {
   height: 13em;
@@ -160,33 +162,19 @@ a {
 .list-group li {
   list-style: none; }
 
+.progress {
+  border-radius: 10px;
+  height: 2.5em; }
+  .progress .progress-bar {
+    color: #fff; }
+
 html {
   height: 100em; }
 
 form {
-  background: #EE3536;
-  border: .5em solid black;
-  padding-left: 2%;
-  padding-right: 2%; }
-  form .form-control {
-    border-radius: 0; }
-  form select.form-control {
-    border-radius: 0; }
-  form input {
-    width: 90%;
-    margin-bottom: 1em;
-    background: #EE3536;
-    outline: none;
-    border-radius: none;
-    -webkit-appearance: none; }
-  form button {
-    width: 100%;
-    border: .3em solid #fff;
-    background: black;
-    outline: none;
-    -webkit-appearance: none; }
-  form .btn {
-    border-radius: 0;
-    margin-bottom: 1em;
-    background: black;
-    color: #EE3536; }
+  background: #95BCC5;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  padding: 6%; }
+  form .formButton {
+    text-align: center; }
