--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,45 +1,22 @@
 @import
+		'variables',
 		'navigation',
 		'landingPage',
 		'homePage',
 		'userPage',
 		'tireInfo',
+		'tireProgressBar',
 		'editCar';
 html {
 	height: 100em;
 }
-
 form{
-	background: #EE3536;
-	border: .5em solid black;
-	padding-left: 2%;
-	padding-right: 2%;
-	.form-control {
-		border-radius:0;
-	}
-	select.form-control{
-		border-radius: 0;
-	}
-	input {
-		width: 90%;
-		margin-bottom: 1em;
-		background: #EE3536;
-		outline: none;
-		border-radius: none;
-		-webkit-appearance: none;
-	}
-	button {
-		width: 100%;
-		border: .3em solid #fff;
-		background: black;
-		outline: none;
-		-webkit-appearance: none;
-	}
-	.btn {
-		border-radius: 0;
-		margin-bottom: 1em;
-		background: black;
-		color: #EE3536;
+	background: $form;
+	border: $border;
+	border-radius: $border-radius;
+	padding: 6%;
+	.formButton {
+		text-align: center;
 	}
 }
 
