--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,10 @@
 $form: #95BCC5;
-$nav-bar: #95BCC5;
+$nav-bar: #12D9FF;
 $button: #95BCC5;
-$event-box: #95BCC5;
+$box: #E4E6E6;
+$box-text: #4B4F50;
+$progress-bar: #12D9FF;
 $landing-bar-inner: #95BCC5;
 $landing-bar-outer: #B8C5C7;
-$border: 1px solid #000000;
+$border: 1px solid #C5BDBD;
 $border-radius: 5px;
