--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,9 +1,13 @@
 $form: #95BCC5;
-$nav-bar: #12D9FF;
-$button: #95BCC5;
+$text-color: #4B4F50;
+$nav-bar: #95BCC5;
+$link-color: #1674F1;
+$button: #E4E6E6;
+$button-text: #4B4F50;
 $box: #E4E6E6;
 $box-text: #4B4F50;
-$progress-bar: #12D9FF;
+$progress-bar: #95BCC5;
+$tire-info: #E4E6E6;
 $landing-bar-inner: #95BCC5;
 $landing-bar-outer: #B8C5C7;
 $border: 1px solid #C5BDBD;
