--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 $form: #95BCC5;
 $text-color: #4B4F50;
 $nav-bar: #95BCC5;
+$nav-link-color: #fff;
 $link-color: #1674F1;
 $button: #E4E6E6;
 $button-text: #4B4F50;
