--- a/styles/_tireInfo.scss
+++ b/styles/_tireInfo.scss
@@ -16,5 +16,9 @@
 	text-align: center;
 	width: 60%;
 	color: $text-color;
-	margin: 0 auto 3em auto;
+	margin: 4em auto;
+}
+.driverInfo {
+	text-align: center;
+	color: $text-color;
 }
