added more styling

--- a/styles/_tireProgressBar.scss
+++ b/styles/_tireProgressBar.scss
@@ -3,7 +3,7 @@
 	color: $text-color;
 	height: 3em;
 	.progress-bar {
-		color: $text-color;
+		color: #fff;
 		background-color: $progress-bar;
 		font-size: 2em;
 		padding-top: .4em;
