--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,15 +1,15 @@
 $form: #95BCC5;
 $text-color: #4B4F50;
-$nav-bar: #95BCC5;
-$nav-link-color: #fff;
+$nav-bar: #47639E;
+$nav-link-color: #FFFFFF;
 $link-color: #1674F1;
-$button: #E4E6E6;
+$button: #ADADB1;
 $button-text: #4B4F50;
-$box: #E4E6E6;
+$box: #fff;
 $box-text: #4B4F50;
-$progress-bar: #95BCC5;
+$progress-bar:  #47639E;
 $tire-info: #E4E6E6;
 $landing-bar-inner: #95BCC5;
 $landing-bar-outer: #B8C5C7;
-$border: 1px solid #C5BDBD;
+$border: 1px solid #656262;
 $border-radius: 5px;
